[gd_scene load_steps=3 format=2]

[ext_resource path="res://Actors/Player/Attacks/Cannon.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 240.0

[node name="Cannon" type="Area2D"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource( 1 )

[node name="Range" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 1.2

[connection signal="area_entered" from="." to="." method="_on_Cannon_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
